fixin bugs
